CSDK-2144: Updating to Android API 34

--- a/starter-kit/src/main/AndroidManifest.xml
+++ b/starter-kit/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <application
         android:extractNativeLibs="true"
@@ -37,7 +40,7 @@
         <service
             android:name="co.daily.android.starterkit.services.DemoActiveCallService"
             android:exported="false"
-            android:foregroundServiceType="phoneCall|camera|microphone" />
+            android:foregroundServiceType="camera|microphone" />
 
     </application>
 
